...
                        android:layout_height="wrap_content"
                        android:text="@string/title_tab_projects_graphic"
                        android:textAppearance="?attr/textAppearanceListItem" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutClusterMap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
...
                        android:layout_height="wrap_content"
                        android:text="@string/cantina_menu_fremont_only"
                        android:textAppearance="?attr/textAppearanceListItem" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutFriends"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
...
                        android:text="@string/title_activity_friends"
                        android:textColor="?attr/colorOnBackground"
                        android:textAppearance="?attr/textAppearanceListItem" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutTimeOnCampus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
...
