<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:contentDescription="@string/icon_people" />

</FrameLayout>